[gd_scene load_steps=8 format=3 uid="uid://dxklt8usixud2"]

[ext_resource type="Script" path="res://assets/scripts/rigidCircle.gd" id="1_0rprb"]
[ext_resource type="Texture2D" uid="uid://coejmsd3aaaua" path="res://assets/sprites/circle.PNG" id="2_ad33x"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8apdc"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_onlxc"]
radius = 83.0542

[sub_resource type="CircleShape2D" id="CircleShape2D_p0mtm"]
radius = 81.0555

[sub_resource type="Curve" id="Curve_fes03"]
_data = [Vector2(0.012931, 1), 0.0, 0.0, 0, 0, Vector2(0.74569, 0.726316), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_8twjr"]
radius = 83.0542

[node name="rigidCircle" type="RigidBody2D"]
position = Vector2(684, 410)
collision_layer = 4
collision_mask = 19
physics_material_override = SubResource("PhysicsMaterial_8apdc")
gravity_scale = 0.0
linear_damp = -1.0
angular_damp = -1.0
script = ExtResource("1_0rprb")
xVelocity = 500
yVelocity = 500

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, -5.96046e-07)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ad33x")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(-7, -6)
shape = SubResource("CircleShape2D_onlxc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-7, -6)
shape = SubResource("CircleShape2D_p0mtm")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 36
lifetime = 1.3
speed_scale = 3.0
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 15.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 75.0
initial_velocity_max = 150.0
scale_amount_min = 4.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_fes03")

[node name="deathTimer" type="Timer" parent="CPUParticles2D"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="soundBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="soundBox"]
position = Vector2(-7, -6)
shape = SubResource("CircleShape2D_8twjr")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="hurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="CPUParticles2D/deathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="soundBox" to="." method="_on_sound_box_body_entered"]
